Team page: Correct alignment issue on modal buttons.

--- a/src/pages/team/teammanagement.less
+++ b/src/pages/team/teammanagement.less
@@ -1069,7 +1069,7 @@
         display: flex;
         justify-content: center;
         button {
-          margin-right: 20px;
+          margin: 0 10px;
         }
       }
     }
